--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,39 @@
-/* здесь используйте глобальные селекторы img, body, html и так далее */
+body {
+  @include font-family("Lato");
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+a {
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.list-reset {
+  list-style: none;
+  padding-left: 0;
+}
