--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,3 +1,14 @@
+.product--show-more {
+  &::before {
+    content: "";
+    width: 30px;
+    height: 30px;
+    display: block;
+    background-image: url("../../icons/stack.svg#plus");
+    background-repeat: no-repeat;
+  }
+}
+
 .product__title {
   @include font-family("Oswald");
   font-weight: 400;
