--- a/source/styles/blocks/program-card.scss
+++ b/source/styles/blocks/program-card.scss
@@ -15,4 +15,19 @@
   font-size: 16px;
   line-height: 16px;
   color: #000000;
+  background-image: url("../../icons/stack.svg#arrow");
+  background-repeat: no-repeat;
+  background-size: 24px 12px;
+}
+
+.program-card--icon-slim {
+  background-image: url("../../icons/stack.svg#program-slim");
+  background-repeat: no-repeat;
+  background-size: 50px 53px;
+}
+
+.program-card--icon-fit {
+  background-image: url("../../icons/stack.svg#program-fit");
+  background-repeat: no-repeat;
+  background-size: 67px 50px;
 }
