--- a/source/styles/blocks/specials.scss
+++ b/source/styles/blocks/specials.scss
@@ -1,26 +1,39 @@
+.specials {
+  background-color: rgba(104, 183, 56, 0.85);
+  display: flex;
+  flex-direction: column;
+  min-height: 290px;
+
+  &::before {
+    content: "";
+    background-image: url("../../images/catalog/specials/specials-background-mobile@1x.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.85;
+    position: absolute;
+    z-index: -1;
+    width: 280px;
+    height: 290px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../images/catalog/specials/specials-background-mobile@2x.jpg");
+    }
+  }
+
+  &::after {
+    content: "";
+    width: 78px;
+    height: 80px;
+    display: block;
+    background-image: url("../../icons/stack.svg#gift");
+    background-repeat: no-repeat;
+    background-size: 78px 80px;
+    order: -1;
+  }
+}
+
 .specials__text {
   color: #ffffff;
   font-size: 16px;
   line-height: 20px;
-}
-
-.specials {
-  height: 290px;
-  background-color: rgba(104, 183, 56, 0.85);
-}
-
-.specials::before {
-  content: "";
-  background-image: url("../../images/catalog/specials/specials-background-mobile@1x.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 0.85;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../../images/catalog/specials/specials-background-mobile@2x.jpg");
-  }
 }
