Заменяет векторную графику

--- a/source/styles/blocks/program-card.scss
+++ b/source/styles/blocks/program-card.scss
@@ -15,9 +15,26 @@
   font-size: 16px;
   line-height: 16px;
   color: #000000;
-  background-image: url("../../icons/stack.svg#arrow");
-  background-repeat: no-repeat;
-  background-size: 24px 12px;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 32px;
+    height: 10px;
+    background-color: #000000;
+    mask-image: url("../../icons/stack.svg#arrow");
+    mask-repeat: no-repeat;
+    mask-size: 24px 12px;
+  }
+
+  &:hover::before {
+    mask-image: url("../../icons/stack.svg#arrow-long");
+    mask-size: 32px 12px;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .program-card--icon-slim {
