--- a/source/styles/blocks/contact-info.scss
+++ b/source/styles/blocks/contact-info.scss
@@ -1,3 +1,18 @@
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 80px;
+    max-width: 565px;
+  }
+}
+
 .contact-info__promo {
   @include font-family("Oswald");
   color: #111111;
