--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,3 +1,21 @@
+.product {
+  display: grid;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+}
+
+.product__image-link {
+  grid-row: 1 / 3;
+}
+
+.product__button {
+  grid-column: 1 / 3;
+}
+
 .product--show-more {
   &::before {
     content: "";
@@ -7,6 +25,9 @@
     background-image: url("../../icons/stack.svg#plus");
     background-repeat: no-repeat;
   }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product__title {
