--- a/source/styles/blocks/social-list.scss
+++ b/source/styles/blocks/social-list.scss
@@ -1,3 +1,17 @@
+.social-list {
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    margin-left: 35px;
+  }
+}
+
 .social-list__link {
   &::before {
     content: "";
