--- a/source/styles/blocks/additional-product.scss
+++ b/source/styles/blocks/additional-product.scss
@@ -1,3 +1,22 @@
+.additional-product {
+  display: grid;
+  padding: 13px 0 19px;
+
+  @media (min-width: $tablet-width) {
+    padding: 26px 38px 28px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 0 17px;
+  }
+}
+
+.additional-product__title-link {
+  grid-row: 1;
+}
+
 .additional-product__title {
   @include font-family("Oswald");
   font-weight: 400;
@@ -11,4 +30,26 @@
   font-size: 14px;
   line-height: 14px;
   color: #444444;
+  display: flex;
+  justify-content: space-between;
+  grid-row: 2;
+
+  @media (min-width: $tablet-width) {
+    grid-row: 1;
+    justify-content: flex-end;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: auto;
+    min-width: 285px;
+    justify-content: space-between;
+  }
+}
+
+.additional-product__button {
+  grid-column: 1;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+  }
 }
