--- a/source/styles/blocks/developers.scss
+++ b/source/styles/blocks/developers.scss
@@ -1,5 +1,20 @@
+.developers {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    gap: 23px;
+  }
+}
+
 .developers__name {
   color: #444444;
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .developers__logo {
@@ -7,7 +22,9 @@
   mask-image: url("../../icons/stack.svg#logo-html-academy");
   mask-repeat: no-repeat;
   mask-size: 27px 34px;
-  min-height: 34px;
+  width: 27px;
+  height: 34px;
+  margin: 0;
 }
 
 .developers:hover .developers__logo {
