--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,27 +1,149 @@
 .hero__container {
   color: #ffffff;
-  background-color: rgba(104, 183, 56, 0.85);
-}
+  position: relative;
+  margin-bottom: 20px;
 
-.hero__container::before {
-  content: "";
-  background-image: url("../../images/index/hero/hero-background-mobile@1x.jpg");
-  background-position: top;
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 0.85;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
+  &::before {
+    content: "";
+    background-image: url("../../images/index/hero/hero-background-mobile@1x.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.85;
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 302px;
+    top: 0;
+    right: 0;
 
-  @media (min-resolution: 2dppx) {
-    background-image: url("../../images/index/hero/hero-background-mobile@2x.jpg");
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../images/index/hero/hero-background-mobile@2x.jpg");
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 302px;
+    top: 0;
+    right: 0;
+    background-color: rgba(104, 183, 56, 0.85);
+  }
+
+  @media (min-width: $tablet-width) {
+    &::before,
+    &::after {
+      display: none;
+    }
+    padding-bottom: 523px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    &::before {
+      display: block;
+      background-image: url("../../images/index/hero/hero-background-desktop@1x.jpg");
+      height: 694px;
+      width: 720px;
+      top: -143px;
+    }
+
+    &::after {
+      display: block;
+      height: 694px;
+      width: 720px;
+      top: -143px;
+    }
+
+    padding-bottom: 266px;
+  }
+
+  @media (min-width: $desktop-width) and (min-resolution: 2dppx) {
+    &::before {
+      background-image: url("../../images/index/hero/hero-background-desktop@2x.jpg");
+    }
   }
 }
 
 .hero__button {
-  font-size: 16px;
-  line-height: 20px;
-  padding: 10px 30px;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 90px;
+    max-width: 244px;
+    padding: 14px 26px;
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
+  }
 }
+
+.hero__title {
+  padding: 27px 15px 15px;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    color: #000000;
+    max-width: 600px;
+    text-align: left;
+    padding: 40px 90px 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 81px 80px 20px;
+  }
+}
+
+.hero__subtitle {
+  padding: 10px 40px 29px;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    color: #000000;
+    max-width: 600px;
+    text-align: left;
+    padding: 20px 90px 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 20px 80px 52px;
+  }
+}
+
+.hero__image {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 3px;
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    left: 29;
+    top: 241px;
+    z-index: -1;
+    width: 709px;
+    height: 609px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 557px;
+    top: 0;
+    z-index: 0;
+    width: 552px;
+    height: 499px;
+  }
+}
+
