--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,3 +1,18 @@
+.main-header__container {
+  display: flex;
+  justify-content: space-between;
+  min-height: 65px;
+  padding: 13px 20px 14px;
+
+  @media (min-width: $tablet-width) {
+    padding: 25px 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 55px 114px 29px;
+  }
+}
+
 .main-header__logo {
   &:hover {
     opacity: 0.8;
