--- a/source/styles/blocks/program-card.scss
+++ b/source/styles/blocks/program-card.scss
@@ -1,5 +1,104 @@
 .program-card {
-  background-color: #d9d9d9;
+  background-color: #f2f2f2;
+  padding: 30px 20px 18px;
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: $color-brand;
+    position: absolute;
+    left: 20px;
+    top: 24px;
+
+    @media (min-width: $tablet-width) {
+      width: 200px;
+      height: 200px;
+      right: 62px;
+      top: 92px;
+      left: auto;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 100px;
+      height: 100px;
+      left: 52px;
+      top: 47px;
+      right: auto;
+    }
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    background-repeat: no-repeat;
+    position: absolute;
+  }
+
+  @media (min-width: $tablet-width) {
+    min-height: 372px;
+    padding: 77px 316px 53px 53px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 374px;
+    padding: 77px 52px 59px;
+  }
+}
+
+.program-card--icon-slim {
+  &::after {
+    background-image: url("../../icons/stack.svg#program-slim");
+    width: 36px;
+    height: 50px;
+    top: 20px;
+    left: 27px;
+
+    @media (min-width: $tablet-width) {
+      right: 93px;
+      top: 81px;
+      left: auto;
+      width: 140px;
+      height: 194px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 70px;
+      height: 97px;
+      top: 41px;
+      left: 67px;
+      right: auto;
+    }
+  }
+}
+
+.program-card--icon-fit {
+  &::after {
+    background-image: url("../../icons/stack.svg#program-fit");
+    width: 67px;
+    height: 28px;
+    top: 35px;
+    left: 12px;
+
+    @media (min-width: $tablet-width) {
+      width: 268px;
+      height: 112px;
+      right: 30px;
+      top: 135px;
+      left: auto;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 134px;
+      height: 56px;
+      top: 67px;
+      left: 33px;
+      right: auto;
+    }
+  }
 }
 
 .program-card__title {
@@ -8,6 +107,38 @@
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
+  margin: 0;
+  padding-left: 71px;
+  max-width: calc(100% - 20px);
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-left: 0;
+    max-width: calc(100% - 53px);
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 162px;
+    max-width: 402px;
+  }
+}
+
+.program-card__description {
+  margin: 0;
+  padding: 29px 0 23px;
+  margin-bottom: 15px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    padding: 24px 0 54px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 73px 0 30px;
+  }
 }
 
 .program-card__link {
@@ -15,8 +146,12 @@
   font-size: 16px;
   line-height: 16px;
   color: #000000;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  min-height: 24px;
 
-  &::before {
+  &::after {
     content: "";
     display: block;
     width: 32px;
@@ -25,9 +160,14 @@
     mask-image: url("../../icons/stack.svg#arrow");
     mask-repeat: no-repeat;
     mask-size: 24px 12px;
+    margin-left: 15px;
+
+    @media (min-width: $tablet-width) {
+      margin-left: 25px;
+    }
   }
 
-  &:hover::before {
+  &:hover::after {
     mask-image: url("../../icons/stack.svg#arrow-long");
     mask-size: 32px 12px;
   }
@@ -35,16 +175,9 @@
   &:active {
     opacity: 0.3;
   }
-}
 
-.program-card--icon-slim {
-  background-image: url("../../icons/stack.svg#program-slim");
-  background-repeat: no-repeat;
-  background-size: 50px 53px;
-}
-
-.program-card--icon-fit {
-  background-image: url("../../icons/stack.svg#program-fit");
-  background-repeat: no-repeat;
-  background-size: 67px 50px;
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
