--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -4,20 +4,25 @@ body {
   line-height: 18px;
   color: #000000;
   margin: 0;
+  min-width: 320px;
+}
+
+
+*,
+* ::before,
+* ::after {
+  box-sizing: border-box;
 }
 
 img {
   max-width: 100%;
   height: auto;
   object-fit: contain;
+  display: block;
 }
 
 a {
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 .visually-hidden {
@@ -35,5 +40,7 @@ a {
 
 .list-reset {
   list-style: none;
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
 }
+
