--- a/source/styles/blocks/statistics.scss
+++ b/source/styles/blocks/statistics.scss
@@ -1,17 +1,50 @@
+.statistics__list {
+  margin: 0;
+  display: flex;
+  gap: 32px;
+  padding-bottom: 34px;
+}
+
+.statistics__item {
+  width: 124px;
+  text-align: center;
+  border: (solid 1px #cdcdcd);
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  min-height: 56px;
+}
+
 .statistics__item-value {
   @include font-family("Oswald");
   font-size: 24px;
   line-height: 24px;
+  text-transform: uppercase;
+  padding: 14px 20px 9px;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
 }
 
 .statistics__item-description {
   font-size: 12px;
   line-height: 12px;
   color: #444444;
+  margin-left: 0;
+  width: 81px;
+  text-transform: lowercase;
+  background-color: #eaeaea;
+  margin-bottom: -16px;
 }
 
 .statistics__cost {
   @include font-family("Oswald");
   font-size: 14px;
   line-height: 20px;
+}
+
+.statistics__cost-text {
+  text-transform: uppercase;
 }
