--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,17 +1,19 @@
 .hero__container {
   color: #ffffff;
-  position: relative;
   margin-bottom: 20px;
+  position: relative;
 
   &::before {
     content: "";
-    background-image: url("../../images/index/hero/hero-background-mobile@1x.jpg");
+    background:
+      url("../../images/index/hero/hero-background-mobile@1x.jpg"),
+      linear-gradient(#54555a, #3f3d41);
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     opacity: 0.85;
     position: absolute;
-    z-index: -2;
+    z-index: -3;
     width: 100%;
     height: 302px;
     top: 0;
@@ -25,7 +27,7 @@
   &::after {
     content: "";
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     width: 100%;
     height: 302px;
     top: 0;
@@ -46,19 +48,23 @@
     &::before {
       display: block;
       background-image: url("../../images/index/hero/hero-background-desktop@1x.jpg");
+      background-color: #535257;
+      background-size: contain;
+      background-position: right;
       height: 694px;
-      width: 720px;
-      top: -143px;
+      width: 50vw;
+      top: 0;
     }
 
     &::after {
       display: block;
       height: 694px;
-      width: 720px;
-      top: -143px;
+      width: 50vw;
+      top: 0;
     }
 
     padding-bottom: 266px;
+    position: static;
   }
 
   @media (min-width: $desktop-width) and (min-resolution: 2dppx) {
@@ -87,6 +93,7 @@
 .hero__title {
   padding: 27px 15px 15px;
   text-align: center;
+  min-height: 114px;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
@@ -125,7 +132,9 @@
 
 .hero__image {
   width: 100%;
+  max-width: 430px;
   height: 100%;
+  margin: 0 auto;
   margin-bottom: 3px;
 
   @media (min-width: $tablet-width) {
@@ -136,12 +145,13 @@
     width: 709px;
     height: 609px;
     margin-bottom: 0;
+    max-width: none;
   }
 
   @media (min-width: $desktop-width) {
-    left: 557px;
-    top: 0;
-    z-index: 0;
+    left: calc(50vw - 161px);
+    top: 143px;
+    z-index: -1;
     width: 552px;
     height: 499px;
   }
