--- a/source/styles/blocks/additional-product.scss
+++ b/source/styles/blocks/additional-product.scss
@@ -1,16 +1,27 @@
 .additional-product {
   display: grid;
-  padding: 13px 0 19px;
+  padding: 12px 0 18px;
+  border-top: solid 1px #cdcdcd;
 
   @media (min-width: $tablet-width) {
-    padding: 26px 38px 28px;
+    padding: 25px 38px 28px;
+    border-right: solid 1px #cdcdcd;
+    border-left: solid 1px #cdcdcd;
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
-    padding: 15px 0 17px;
+    align-items: center;
+    padding: 15px 0 16px;
+    border-right: none;
+    border-left: none;
+    gap: 40px;
   }
+}
+
+.additional-product:last-child {
+  border-bottom: solid 1px #cdcdcd;
 }
 
 .additional-product__title-link {
@@ -19,37 +30,55 @@
 
 .additional-product__title {
   @include font-family("Oswald");
+  margin: 0 0 13px;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
   color: #222222;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .additional-product__properties-wrap {
-  font-size: 14px;
-  line-height: 14px;
-  color: #444444;
   display: flex;
   justify-content: space-between;
   grid-row: 2;
+  margin: 0;
+  font-size: 14px;
+  line-height: 14px;
+  color: #444444;
 
   @media (min-width: $tablet-width) {
-    grid-row: 1;
     justify-content: flex-end;
+    grid-row: 1;
+    font-size: 16px;
+    line-height: 20px;
+    gap: 49px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: auto;
-    min-width: 285px;
     justify-content: space-between;
+    min-width: 285px;
+    margin-left: auto;
   }
 }
 
 .additional-product__button {
   grid-column: 1;
+  margin-top: 15px;
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
+    margin-top: 25px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 244px;
+    margin-top: 0;
   }
 }
