--- a/source/styles/blocks/benefits.scss
+++ b/source/styles/blocks/benefits.scss
@@ -12,40 +12,86 @@
 
 .benefits__title {
   margin-bottom: 40px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 32px;
+  }
 }
 
 .benefits__list {
   display: flex;
   flex-flow: column wrap;
   gap: 20px;
+  counter-reset: number 0;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
     gap: 37px;
     justify-content: space-between;
+    margin-right: 75px;
+  }
+
+  @media (min-width: $desktop-width) {
+    justify-content: space-between;
+    margin-right: 0;
   }
 }
 
 .benefits__item {
-  color: #444444;
+  position: relative;
   display: flex;
-  gap: 20px;
   align-items: center;
+  color: #444444;
+  counter-increment: number 1;
+  gap: 20px;
 
   &::before {
     content: "";
+    display: block;
+    flex-shrink: 0;
     width: 60px;
     height: 60px;
     background-color: $color-brand;
-    display: block;
     background-repeat: no-repeat;
-    background-size: 30px 32px;
     background-position: center;
-    flex-shrink: 0;
+    background-size: 30px 32px;
   }
 
   @media (min-width: $tablet-width) {
+    flex-direction: column;
+    align-items: flex-start;
     max-width: 250px;
+    min-height: 280px;
+    padding: 40px 0 57px;
+    gap: 31px;
+    font-size: 16px;
+    line-height: 24px;
+
+    &::before {
+      width: 80px;
+      height: 80px;
+    }
+
+    &::after {
+      @include font-family("Oswald");
+      content: ""counter(number);
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: -5;
+      display: block;
+      font-size: 280px;
+      line-height: 280px;
+      color: #f2f2f2;
+    }
+  }
+}
+
+.benefits__item:first-child {
+  @media (min-width: $tablet-width) {
+    &::after {
+      right: 25px;
+    }
   }
 }
 
