--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,18 +1,47 @@
 .button {
   @include font-family("Oswald");
   display: inline-block;
-  padding: 10px 54px;
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-  background-color: $color-brand;
+  padding: 10px;
   font-size: 16px;
   line-height: 20px;
-  text-transform: uppercase;
   text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: $color-brand;
+  border: none;
+  cursor: pointer;
 }
 
 .button--additional {
-  background-color: #f2f2f2;
   color: #444444;
+  background-color: #f2f2f2;
+}
+
+.button:hover {
+  background-color: #5eaa2f;
+}
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button--additional:hover {
+  color: #444444;
+  background-color: #ebebeb;
+}
+
+.button.disabled,
+.button:disabled {
+  color: #ffffff;
+  background-color: $color-brand;
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.button--additional.disabled,
+.button--additional:disabled {
+  color: #444444;
+  background-color: #ebebeb;
+  opacity: 0.6;
+  pointer-events: none;
 }
