--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,37 +1,42 @@
 .hero__container {
-  color: #ffffff;
-  margin-bottom: 20px;
   position: relative;
+  margin-bottom: 20px;
+  color: #ffffff;
 
   &::before {
     content: "";
-    background:
-      url("../../images/index/hero/hero-background-mobile@1x.jpg"),
-      linear-gradient(#54555a, #3f3d41);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    opacity: 0.85;
     position: absolute;
+    top: 0;
+    right: 0;
     z-index: -3;
     width: 100%;
     height: 302px;
-    top: 0;
-    right: 0;
+    background:
+      url("../../images/index/hero/hero-background-mobile@1x.jpg"),
+      linear-gradient(#54555a, #3f3d41);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    opacity: 0.85;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../images/index/hero/hero-background-mobile@2x.jpg");
+      background:
+        url("../../images/index/hero/hero-background-mobile@2x.jpg"),
+        linear-gradient(#54555a, #3f3d41);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
     }
   }
 
   &::after {
     content: "";
     position: absolute;
+    top: 0;
+    right: 0;
     z-index: -2;
     width: 100%;
     height: 302px;
-    top: 0;
-    right: 0;
     background-color: rgba(104, 183, 56, 0.85);
   }
 
@@ -40,31 +45,31 @@
     &::after {
       display: none;
     }
-    padding-bottom: 523px;
     margin-bottom: 0;
+    padding-bottom: 523px;
   }
 
   @media (min-width: $desktop-width) {
+    position: static;
+    padding-bottom: 266px;
+
     &::before {
-      display: block;
-      background-image: url("../../images/index/hero/hero-background-desktop@1x.jpg");
-      background-color: #535257;
-      background-size: contain;
-      background-position: right;
-      height: 694px;
-      width: 50vw;
       top: 0;
+      display: block;
+      width: 50vw;
+      height: 694px;
+      background-color: #535257;
+      background-image: url("../../images/index/hero/hero-background-desktop@1x.jpg");
+      background-position: right;
+      background-size: contain;
     }
 
     &::after {
-      display: block;
-      height: 694px;
-      width: 50vw;
       top: 0;
+      display: block;
+      width: 50vw;
+      height: 694px;
     }
-
-    padding-bottom: 266px;
-    position: static;
   }
 
   @media (min-width: $desktop-width) and (min-resolution: 2dppx) {
@@ -78,8 +83,8 @@
   width: 100%;
 
   @media (min-width: $tablet-width) {
-    margin-left: 90px;
     max-width: 244px;
+    margin-left: 90px;
     padding: 14px 26px;
     font-size: 20px;
     line-height: 26px;
@@ -91,17 +96,15 @@
 }
 
 .hero__title {
+  min-height: 114px;
   padding: 27px 15px 15px;
   text-align: center;
-  min-height: 114px;
 
   @media (min-width: $tablet-width) {
-    font-size: 60px;
-    line-height: 60px;
-    color: #000000;
     max-width: 600px;
-    text-align: left;
     padding: 40px 90px 20px;
+    text-align: start;
+    color: #000000;
   }
 
   @media (min-width: $desktop-width) {
@@ -111,18 +114,18 @@
 
 .hero__subtitle {
   padding: 10px 40px 29px;
-  text-transform: uppercase;
   font-size: 14px;
   line-height: 14px;
   text-align: center;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
+    max-width: 600px;
+    padding: 20px 90px 50px;
     font-size: 20px;
     line-height: 20px;
-    color: #000000;
-    max-width: 600px;
     text-align: left;
-    padding: 20px 90px 50px;
+    color: #000000;
   }
 
   @media (min-width: $desktop-width) {
@@ -139,18 +142,18 @@
 
   @media (min-width: $tablet-width) {
     position: absolute;
-    left: 29;
     top: 241px;
+    left: 29;
     z-index: -1;
     width: 709px;
+    max-width: none;
     height: 609px;
     margin-bottom: 0;
-    max-width: none;
   }
 
   @media (min-width: $desktop-width) {
-    left: calc(50vw - 161px);
     top: 143px;
+    left: calc(50vw - 161px);
     z-index: -1;
     width: 552px;
     height: 499px;
