--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,6 +1,6 @@
 .main-footer {
-  background-color: #f2f2f2;
   padding: 20px 0;
+  background-color: #f2f2f2;
 
   @media (min-width: $tablet-width) {
     padding: 55px 0;
@@ -21,10 +21,16 @@
   }
 }
 
+.main-footer__social {
+  @media (min-width: $tablet-width) {
+    margin-left: 35px;
+  }
+}
+
 .main-footer__logo {
-  padding: 20px 0;
   display: flex;
   justify-content: center;
+  padding: 20px 0;
 
   &:hover {
     opacity: 0.8;
