--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,3 +1,7 @@
+.main-header {
+  position: relative;
+}
+
 .main-header__container {
   display: flex;
   justify-content: space-between;
@@ -9,7 +13,26 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 55px 114px 29px;
+    padding: 55px 110px 29px;
+  }
+}
+
+.main-header--inner .main-header__container {
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    height: 1px;
+    background-color: #d9d9d9;
+  }
+
+  @media (min-width: $tablet-width) {
+    &::after {
+      display: none;
+    }
   }
 }
 
