--- a/source/styles/blocks/product-list.scss
+++ b/source/styles/blocks/product-list.scss
@@ -1,13 +1,14 @@
 .product-list {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 45px;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
+    gap: 60px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 63px 80px;
   }
 }
