--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,45 +1,184 @@
 .product {
+  position: relative;
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px 0 25px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -20px;
+    display: block;
+    width: 100vw;
+    height: 1px;
+    background-color: #ebebeb;
+  }
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    min-height: 511px;
+    padding: 0 37px 40px;
+    background: linear-gradient(#ffffff 0% 16%, #f2f2f2 16% 100%);
+
+    &::after {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 245px;
+    padding: 10px 38px 40px;
+  }
+}
+
+.product:first-child {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -20px;
+    display: block;
+    width: 100vw;
+    height: 1px;
+    background-color: #ebebeb;
+  }
+
+  @media (min-width: $tablet-width) {
+    &::before {
+      display: none;
+    }
   }
 }
 
 .product__image-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   grid-row: 1 / 3;
+  min-height: 107px;
+
+  @media (min-width: $tablet-width) {
+    flex-grow: 1;
+    padding: 10px 0 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 0 12px;
+  }
+}
+
+.product__image {
+  @media (min-width: $desktop-width) {
+    max-height: 196px;
+  }
 }
 
 .product__button {
   grid-column: 1 / 3;
+  width: 100%;
+  margin-top: 17px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 33px;
+  }
 }
 
 .product--show-more {
-  &::before {
-    content: "";
-    width: 30px;
-    height: 30px;
-    display: block;
-    background-image: url("../../icons/stack.svg#plus");
-    background-repeat: no-repeat;
-  }
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 25px 0;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 25px;
+    background-image: url("../../icons/stack.svg#plus");
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: $tablet-width) {
+    align-self: end;
+    min-height: 429px;
+    padding: 48px 37px 38px;
+    background: #ffffff;
+    border: 2px solid #f2f2f2;
+
+    &::before {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 50px;
+      background-image: url("../../icons/stack.svg#plus-big");
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &::before {
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.product__title-link {
+  @media (min-width: $tablet-width) {
+    align-self: center;
+  }
 }
 
 .product__title {
   @include font-family("Oswald");
+  max-width: 76px;
+  margin: 2px 0 13px;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   color: #222222;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    max-width: 135px;
+    margin: 0 0 20px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 140px;
+    margin: 0 0 23px;
+  }
+}
+
+.product--show-more .product__title {
+  max-width: max-content;
+  margin: 0 0 8px;
+
+  @media (min-width: $tablet-width) {
+    max-width: 134px;
+    margin: 0 0 23px;
+  }
 }
 
 .product__text-additional {
+  margin: 0;
   font-size: 12px;
   line-height: 16px;
   color: #444444;
+
+  @media (min-width: $tablet-width) {
+    max-width: 170px;
+    margin-bottom: auto;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+  }
+}
+
+.product__button.button--additional {
+  margin-top: 21px;
 }
