--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,5 +1,104 @@
+.subscribe {
+  padding: 20px 0 40px;
+
+  @media (min-width: $tablet-width) {
+    padding: 40px 38px 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 48px 0 104px;
+  }
+}
+
 .subscribe__text {
   @include font-family("Oswald");
+  margin: 0 auto;
+  padding: 32px 0 24px;
   font-size: 16px;
   line-height: 24px;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    max-width: 632px;
+    padding: 66px 0 24px;
+    font-size: 24px;
+    line-height: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: max-content;
+    padding: 72px 0 24px;
+  }
+}
+
+.subscribe__form {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  row-gap: 16px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
+.subscribe__label {
+  flex-grow: 1;
+
+  @media (min-width: $tablet-width) {
+    max-width: 496px;
+  }
+}
+
+.subscribe__input {
+  @include font-family("Oswald");
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  min-width: 280px;
+  min-height: 56px;
+  padding: 13px;
+  font-size: 20px;
+  line-height: 24px;
+  color: #444444;
+  border: 1px solid #e7e7e7;
+}
+
+.subscribe__input::placeholder {
+  color: #444444;
+  text-transform: uppercase;
+}
+
+.subscribe__input:hover {
+  border: 1px solid #cdcdcd;
+}
+
+.subscribe__input:focus {
+  border: none;
+  outline: 2px solid #444444;
+}
+
+.subscribe__input.error {
+  border: none;
+  outline: 2px solid #ff8282;
+}
+
+.subscribe__input.disabled,
+.subscribe__input:disabled {
+  border: none;
+  opacity: 0.5;
+}
+
+.subscribe__button {
+  min-width: 280px;
+  min-height: 56px;
+  font-size: 20px;
+  line-height: 26px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 256px;
+    font-size: 20px;
+    line-height: 26px;
+  }
 }
