--- a/source/styles/blocks/subtitle.scss
+++ b/source/styles/blocks/subtitle.scss
@@ -1,7 +1,17 @@
 .subtitle {
   @include font-family("Oswald");
+  margin: 0;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 40px;
+    line-height: 40px;
+  }
 }
