--- a/source/styles/blocks/benefits.scss
+++ b/source/styles/blocks/benefits.scss
@@ -1,12 +1,28 @@
 .benefits {
+  position: relative;
   padding: 23px 0 49px;
 
   @media (min-width: $tablet-width) {
     padding: 45px 0 47px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: #e6e6e6;
+    }
   }
 
   @media (min-width: $desktop-width) {
     padding: 71px 0 69px;
+
+    &::after {
+      display: none;
+    }
   }
 }
 
