--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -3,7 +3,9 @@
 }
 
 .main-header__container {
+  position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   min-height: 65px;
   padding: 13px 20px 14px;
@@ -44,4 +46,13 @@
   &:active {
     opacity: 0.6;
   }
+}
+
+.nojs .main-header__container {
+  flex-direction: column;
+  padding: 13px 20px 0;
+}
+
+.nojs .main-header__logo {
+  padding: 0 0 15px;
 }
