--- a/source/styles/blocks/main-navigation.scss
+++ b/source/styles/blocks/main-navigation.scss
@@ -15,6 +15,7 @@
   display: inline-block;
   width: 24px;
   height: 24px;
+  padding: 0;
   background-color: transparent;
   background-image: url("../../icons/stack.svg#burger");
   border: none;
@@ -23,4 +24,14 @@
   @media (min-width: $tablet-width) {
     display: none;
   }
+}
+
+.main-navigation--opened .main-navigation__toggle {
+  width: 18px;
+  height: 18px;
+  background-image: url("../../icons/stack.svg#close");
+}
+
+.nojs .main-navigation__toggle {
+  display: none;
 }
