--- a/source/styles/blocks/program-card.scss
+++ b/source/styles/blocks/program-card.scss
@@ -125,15 +125,31 @@
 }
 
 .program-card__description {
+  position: relative;
   margin: 0;
   margin-bottom: 15px;
   padding: 29px 0 23px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #d9d9d9;
+  }
 
   @media (min-width: $tablet-width) {
     margin-bottom: 0;
     padding: 24px 0 54px;
     font-size: 16px;
     line-height: 24px;
+
+    &::after {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
