--- a/source/styles/blocks/subtitle.scss
+++ b/source/styles/blocks/subtitle.scss
@@ -15,3 +15,52 @@
     line-height: 40px;
   }
 }
+
+.subtitle--inner {
+  position: relative;
+  max-width: max-content;
+
+  &::before {
+    content: "";
+    position: absolute;
+    right: calc(100% + 40px);
+    bottom: 50%;
+    display: block;
+    width: 100vw;
+    height: 2px;
+    background-color: $color-brand;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 50%;
+    left: calc(100% + 40px);
+    display: block;
+    width: 100vw;
+    height: 2px;
+    background-color: $color-brand;
+  }
+}
+
+.subtitle--with-paddings {
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+    &::before {
+      right: 100%;
+    }
+
+    &::after {
+      left: 100%;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &::before {
+      right: calc(100% + 40px);
+    }
+
+    &::after {
+      left: calc(100% + 40px);
+    }
+  }
+}
