--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -3,11 +3,11 @@
   background-color: #f2f2f2;
 
   @media (min-width: $tablet-width) {
-    padding: 55px 0;
+    padding: 57px 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 66px 0;
+    padding: 67px 0 66px;
   }
 }
 
