--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,5 +1,6 @@
 .slider {
   position: relative;
+  display: flex;
   max-width: 280px;
 
   @media (min-width: $tablet-width) {
@@ -7,9 +8,14 @@
   }
 }
 
-.slider__image-before {
+.slider__image-wrap {
+  width: 50%;
+}
+
+.slider__image {
   width: 280px;
-  height: 246px;
+  height: 256px;
+  object-fit: cover;
 
   @media (min-width: $tablet-width) {
     width: 560px;
@@ -17,13 +23,21 @@
   }
 }
 
+.slider__image--before {
+  object-position: left;
+}
+
+.slider__image--after {
+  object-position: right;
+}
+
 .slider__button {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: calc(50% - 2px);
   display: inline-block;
   width: 4px;
-  height: 256px;
+  height: 100%;
   padding: 0;
   background-color: #666666;
   border: none;
@@ -34,10 +48,10 @@
     content: "";
     position: absolute;
     top: calc(50% - 20px);
-    right: -17px;
+    right: -18px;
     display: block;
-    width: 36px;
-    height: 36px;
+    width: 40px;
+    height: 40px;
     background-color: #ffffff;
     border: 2px solid;
     border-color: #666666;
@@ -47,8 +61,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: calc(50% - 11px);
-    right: -11px;
+    top: calc(50% - 9px);
+    right: -10px;
     display: block;
     width: 24px;
     height: 18px;
