--- a/source/styles/blocks/specials.scss
+++ b/source/styles/blocks/specials.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   width: 280px;
-  height: 290px;
+  min-height: 290px;
   background-color: rgba(104, 183, 56, 0.85);
 
   &::before {
@@ -13,10 +13,10 @@
     position: absolute;
     z-index: -1;
     width: 280px;
-    height: 290px;
+    height: 100%;
     background-image: url("../../images/catalog/specials/specials-background-mobile@1x.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     opacity: 0.85;
 
     @media (min-resolution: 2dppx) {
@@ -40,12 +40,12 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     padding: 0;
 
     &::before {
       width: 100%;
-      height: 200px;
+      height: 100%;
       background-image: url("../../images/catalog/specials/specials-background-tablet@1x.jpg");
       background-size: cover;
     }
