--- a/source/styles/blocks/statistics.scss
+++ b/source/styles/blocks/statistics.scss
@@ -80,6 +80,10 @@
     line-height: 14px;
     background-color: #ffffff;
   }
+
+  @media (min-width: $desktop-width) {
+    background-color: #f2f2f2;
+  }
 }
 
 .statistics__cost {
@@ -94,6 +98,7 @@
   @media (min-width: $tablet-width) {
     flex-direction: column;
     align-items: flex-end;
+    max-width: 200px;
     font-size: 20px;
     gap: 9px;
   }
@@ -102,6 +107,7 @@
     flex-direction: row;
     justify-content: flex-start;
     gap: 66px;
+    max-width: max-content;
   }
 }
 
