--- a/source/styles/blocks/additional-product.scss
+++ b/source/styles/blocks/additional-product.scss
@@ -33,20 +33,21 @@
   margin: 0 0 13px;
   font-weight: 400;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 20px;
   color: #222222;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     margin: 0;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 24px;
   }
 }
 
 .additional-product__properties-wrap {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 5px;
   grid-row: 2;
   margin: 0;
