--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -20,9 +20,33 @@
   display: block;
   width: 100%;
   height: 362px;
+  background-image: url("../../images/map/map-mobile@1x.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../images/map/map-mobile@2x.png");
+  }
+
+  @media (min-width: 376px) {
+    background-image: url("../../images/map/map-tablet@1x.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../images/map/map-tablet@2x.png");
+    }
+  }
 
   @media (min-width: $tablet-width) {
     height: 400px;
+  }
+
+  @media (min-width: 769px) {
+    background-image: url("../../images/map/map-desktop@1x.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../images/map/map-desktop@2x.png");
+    }
   }
 
   @media (min-width: $desktop-width) {
